--- a/ShareX.HelpersLib/Properties/Resources.resx
+++ b/ShareX.HelpersLib/Properties/Resources.resx
@@ -1282,7 +1282,7 @@ Would you like to download and install it?</value>
     <value>Capture pre configured window</value>
   </data>
   <data name="UpdateChannel_Dev" xml:space="preserve">
-    <value>Dev</value>
+    <value>Dev (Upstream)</value>
   </data>
   <data name="UpdateChannel_PreRelease" xml:space="preserve">
     <value>Pre-release</value>
